gitops/clusters/apse2/local/platform/dashy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: dashy-config
              mountPath: /app/public/conf.yml
              subPath: conf.yml
      volumes:
        - name: dashy-config
          configMap:
            name: dashy-config
