gitops/clusters/apse2/local/platform/dashy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  namespace: platform

spec:
  ingressClassName: nginx
  rules:
    - host: phil.opswork.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashy
                port:
                  number: 8080
